# docs/swagger.json
@@ -696,7 +696,7 @@
                 }
             }
         },
-        "/parser/import-and-save": {
+        "/parser/upload/csv": {
             "post": {
                 "security": [
                     {
@@ -728,70 +728,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/parser.ImportAndSaveResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/parser/upload/csv": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Faz upload de um arquivo CSV contendo transações",
-                "consumes": [
-                    "multipart/form-data"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "parser"
-                ],
-                "summary": "Upload CSV",
-                "parameters": [
-                    {
-                        "type": "file",
-                        "description": "CSV file",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/parser.UploadResponse"
                         }
                     },
                     "400": {
@@ -1144,23 +1080,6 @@
                 },
                 "description": {
                     "type": "string"
-                }
-            }
-        },
-        "parser.UploadResponse": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "transactions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/parser.Transaction"
-                    }
                 }
             }
         }
