# src/internal/parser/routes.go
@@ -6,6 +6,5 @@ func RegisterRoutes(group *gin.RouterGroup, handler *Handler) {
 	parser := group.Group("/parser")
 	{
 		parser.POST("/upload/csv", handler.UploadCSV)
-		parser.POST("/import-and-save", handler.ImportAndSaveCSV)
 	}
 }
